--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Affordable and professional web design">
             <meta name="keywords" content="web design, affordable web design, professional web design">
         <meta name="author" content="Cameron Usher">
-        <title>Oklahoma City Thunder | About</title>
+        <title>Oklahoma City Thunder | About Us</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
@@ -44,7 +44,7 @@
                     If you want to learn more about the Oklahoma City Thunder's remaining schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
                   </p>
                   <p class="dark">
-                    Current Roster for the OKC Thunder: 
+                    Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
                   </p>
               </article>
               
@@ -58,7 +58,7 @@
         </section>
       
         <footer>
-          <p>National Basketball Association, Copyright &copy; 2017</p>
+          <p>Oklahoma City Thunder, Copyright &copy; 2017</p>
         </footer>
     </body>
 </html>
