--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta name="keywords" content="web design, affordable web design, professional web design">
         <meta name="author" content="Cameron Usher">
         <title>Oklahoma City Thunder | Welcome</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/style.css" href="./img">
     </head>
     <body>
       <header>
@@ -44,7 +44,7 @@
           <div class="container">
               <div class="box">
                   <h3>Coaching Staff</h3>
-                  <p>|Billy Donovan - Head Coach | Adrian Griffin - Assistant Coach| |Maurice Cheeks - Assistant Coach | Sam Presti - GM|</p>
+                  <p>Billy Donovan - Head Coach | Adrian Griffin - Assistant Coach | Maurice Cheeks - Assistant Coach | Sam Presti - GM</p>
               </div>
               <div class="box">
                   <h3>Mascot</h3>
@@ -58,7 +58,7 @@
       </section>
       
       <footer>
-          <p>National Basketball Association, Copyright &copy; 2017</p>
+          <p>Oklahoma City Thunder, Copyright &copy; 2017</p>
       </footer>
     </body>
 </html>
