--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li class="current"><a href="about.html">About</a></li>
-                    <li><a href="services.html">Community Service</a></li>
+                    <li><a href="services.html">Community</a></li>
+                    <li><a href="projects.html">Project Portfolio</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +42,7 @@
                   <h1 class="page-title">About Us</h1>
                   <p>
                     If you want to learn more about the Oklahoma City Thunder's standings, <a href="http://www.espn.com/nba/standings">ESPN</a> has the answers you need!<br />
-                    If you want to learn more about the Oklahoma City Thunder's remaining schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
+                    If you want to learn more about the Oklahoma City Thunder's schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
                   </p>
                   <p class="dark">
                     Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
@@ -51,7 +52,7 @@
               <aside id="sidebar">
                   <div class="dark">
                   <h3>Our History, Then and Now</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                  <p>Before the Oklahoma City Thunder era, there existed an NBA team centered in the great city of Seattle. This team was known as the Supersonics, founded in 1967 and part of the Pacific Northwest Divisions.</p>
                   </div>
               </aside>
             </div>
