--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="current"><a href="services.html">Community</a></li>
-                    <li><a href="projects.html">Project Portfolio</a></li>
+                    <li><a href="services.html">Community</a></li>
+                    <li class="current"><a href="projects.html">Project Portfolio</a></li>
                 </ul>
             </nav>
         </div>
