--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                   <div class="dark">
                   <h3>Our History, Then and Now</h3>
                   <p>Before the Oklahoma City Thunder era, there existed an NBA team centered in the great city of Seattle. This team was known as the Supersonics, founded in 1967 and part of the Pacific Northwest Divisions. Click on the images to learn more about the history of each team!</p>
-                  <a href="http://www.nba.com/thunder/"><img src="./logo.png" width="90" height="90" align="center"></a>
-                  <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./logo2.png" width="90" height="90" align="right"></a>
+                  <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./logo2.png" width="90" height="90" align="center"></a>
+                  <a href="http://www.nba.com/thunder/"><img src="./logo.png" width="90" height="90" align="right"></a>
                   </div>
               </aside>
             </div>
