--- a/about.html
+++ b/about.html
@@ -47,6 +47,8 @@
                   <p class="dark">
                     Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
                   </p>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MMRdvbUpp-U" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                  <p>Check out this highlight video of the Thunder vs. Warriors game, where Russell Westbrook posted his fifth triple double of the season in Kevin Durant's return to OKC!</p>
               </article>
               
               <aside id="sidebar">
