--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Affordable and professional web design">
             <meta name="keywords" content="web design, affordable web design, professional web design">
         <meta name="author" content="Cameron Usher">
-        <title>Oklahoma City Thunder | Community Service Activities</title>
+        <title>Oklahoma City Thunder | My Project Portfolio</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
@@ -39,21 +39,30 @@
       <section id="main">
           <div class="container">
               <article id="main-col">
-                <h1 class="page-title">Oklahoma City Service Organizations</h1>
+                <h1 class="page-title">My AP Computer Science: Principles Project Page!</h1>
                     <ul id="services">
                     <li>
-                        <h3>Thunder Cares&copy; Organization</h3>
-                        <p>The Thunder Cares&copy; Organization works to create programs that make a positive impact on the greater Oklahoma City community. Their primary focus is on youth, with an emphasis on reading and literacy, health and fitness, and, of course, basketball.</p>
-                        <p>To see the Thunder Cares&copy; Organization in action, <a href="http://www.nba.com/thunder/community">click here</a>!</p>
+                        <h3>Python Assignments</h3>
+                        <div class="button1" style="background-color:3465AA">
+                    <a href="Usher_TwoRail.py" download="Usher_TwoRail.py">
+                       <p class="button1">Two Rail Cipher</p> 
+                    </a>
+                        </div>
+                        <div class="button2" style="background-color:D2691E">
+                    <a href="Usher_Substitution.py" download="Usher_Substitution.py">
+                        <p class="button2">Substitution Cipher</p>
+                    </a>
+                        </div>
+                    <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
                     <li>
-                        <h3>Around the Holidays</h3>
+                        <h3>Turtle Projects</h3>
                         <p>During the course of the holiday season, the Oklahoma City Thunder organization participates in the annual "Thunder Blue Christmas", where the players help fulfill childrens' wishlists in supporting Target stores.</p>
                         <img src="./russtarget.jpg" width="300" height="200" align="center">
                         <p><font size="1">Russell Westbrook takes a young fan and her parents around the store to cross things off of her list.</font></p>
                     </li>
                     <li>
-                        <h3>Communication Services/Career Options</h3>
+                        <h3>Miscellaneous</h3>
                         <p>Looking to become a season ticket holder? Seeking some fun facts? Here's our gift to you: <a href="http://www.nba.com/thunder/renewalthundercares1718/">show me</a>!</p>
                         <p>Interested in employment opportunities? Follow <a href="http://www.nba.com/thunder/employment">this website</a> to check out any available positions open for hiring.</p>
                     </li>
