--- a/projects.html
+++ b/projects.html
@@ -53,46 +53,66 @@
                         <p class="button2">Substitution Cipher</p>
                     </a>
                         </div>
+                        <div class="button3" style="background-color:7CB854">
+                    <a href="Usher_Series Notation.py" download="Usher_Series Notation.py">
+                        <p class="button3">Series Notation</p>
+                    </a>
+                        </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
                     <li>
-                        <h3>Turtle Projects</h3>
-                        <p>During the course of the holiday season, the Oklahoma City Thunder organization participates in the annual "Thunder Blue Christmas", where the players help fulfill childrens' wishlists in supporting Target stores.</p>
-                        <img src="./russtarget.jpg" width="300" height="200" align="center">
-                        <p><font size="1">Russell Westbrook takes a young fan and her parents around the store to cross things off of her list.</font></p>
+                        <h3>Turtle/Scratch Projects</h3>
+                        <div class="button4" style="background-color:0AA275">
+                    <a href="Usher_Turtle Project.py" download="Usher_Turtle Project.py">
+                        <p class="button4">Turtle Assignment</p>
+                    </a>
+                        </div>
+                        <div class="button5" style="background-color:00A2FF">
+                    <a href="funtime.py" download="funtime.py">
+                        <p class="button5">Honeycomb Design</p>
+                    </a>
+                        </div>
+                        <div class="button9" style="background-color:FFA500">
+                    <a href="https://scratch.mit.edu/projects/172038135/">
+                        <p class="button9">Scratch Game</p>
+                    </a>
+                        </div>
+                    <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
                     <li>
                         <h3>Miscellaneous</h3>
-                        <p>Looking to become a season ticket holder? Seeking some fun facts? Here's our gift to you: <a href="http://www.nba.com/thunder/renewalthundercares1718/">show me</a>!</p>
-                        <p>Interested in employment opportunities? Follow <a href="http://www.nba.com/thunder/employment">this website</a> to check out any available positions open for hiring.</p>
+                        <div class="button6" style="background-color:000000">
+                    <a href="abstraction.py" download="abstraction.py">
+                        <p class="button6">Abstraction Assignment</p>
+                    </a>
+                        </div>
+                        <div class="button7" style="background-color:4B0082">
+                    <a href="Usher_Loops.py" download="Usher_Loops.py">
+                        <p class="button7">Loops Assignment</p>
+                    </a>
+                        </div>
+                        <div class="button8" style="background-color:CD853F">
+                    <a href="https://repl.it/@CameronUsher/Python-Story">
+                        <p class="button8">Python Story</p>
+                    </a>
+                        </div>
+                    <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
                       
                   </ul>
               </article>
               
               <aside id="sidebar">
-                  <div class="dark">
-                  <h3>Have Any Questions? Ready for Employment? Contact Us!</h3>
-                  <form class="quote">
-                    <div>
-                        <label>Name</label><br>
-                        <input type="text" placeholder="Name">
-                    </div>
-                    <div>
-                        <label>Email</label><br>
-                        <input type="email" placeholder="Email Address">
-                    </div>
-                    <div>
-                        <label>Message</label><br>
-                        <textarea placeholder="Message"></textarea>
-                    </div>
-                    <button class="button_1" type="submit"> Send your request here. We'll get back you soon!</button>
-                  </form>
+                  <div class="box">
+                      <h3>Repl.it Account Setup</h3>
+                      <a href="https://repl.it"><img src="./replitlogo.png" width="250" height="150" align="center"></a>
+                      <p><font size="2">To create your own repl.it account, click on the image to begin!</font></p>
                   </div>
-                  <img src="./paulgeorge.jpg" width="300" height="200" align="center">
-                  <p>Paul George is seen here playing laser tag with stroke victims and their families in the first annual PG Christmas Celebration.</p>
-                  <img src=".//jeramigrant.jpg" width="300" height="200" align="center">
-                  <p>Jerami Grant helps students of Will Rogers Elementary choose a free book on the Thunder Book Bus, presented by American Fidelity.</p>
+                  <div class="box">
+                      <h3>Python Downloader</h3>
+                      <a href="https://www.python.org/downloads/"><img src="./python logo.jpg" width="250" height="150" align="center"></a>
+                      <p><font size="2">To download the Python application, click on the image to begin!</font></p>
+                  </div>
                 </aside>
         </section>
         <footer>
