--- a/index.html
+++ b/index.html
@@ -45,20 +45,23 @@
           <div class="container">
               <div class="box">
                   <h3>Coaching Staff</h3>
-                  <p>Billy Donovan - Head Coach | Adrian Griffin - Assistant Coach | Maurice Cheeks - Assistant Coach | Sam Presti - GM</p>
-                  <a href="http://www.nba.com/thunder/team/coaches"><img src="./west.jpg" width="200" height="150" align="center"></a>
+                  <p class="dark">Billy Donovan - Head Coach | Adrian Griffin - Assistant Coach | Maurice Cheeks - Assistant Coach | Sam Presti - GM</p>
+                  <a href="http://www.nba.com/thunder/team/coaches"><img src="./west.jpg" title="Russell Westbrook (left) and Billy Donovan (right)" width="200" height="150" align="center"></a>
                   <p><font size="1">Click the image to learn more about the Oklahoma City Thunder's coaching staff.</font></p>
               </div>
               <div class="box">
-                  <h3>Mascot</h3>
+                  <ul id="services"><h3>Mascot</h3>
+                  <li>
                   <p>Rumble the Bison is the face of the Oklahoma City Thunder. Introduced on February 17, 2009, Rumble's name comes from the sound thunder makes. On August 13, 2009, Rumble was awarded the NBA's Mascot of the Year Award due to his tremendous interactions with fans. You can see him in action giving people high-fives, hugs, and team oriented t-shirts.   </p>
-                  <a href="http://www.nba.com/thunder/rumble"><img src="./mascot.jpg" width="200" height="200" align="center"></a>
+                  </li>
+                  </ul>
+                  <a href="http://www.nba.com/thunder/rumble"><img src="./mascot.jpg" title="Rumble the Bison" width="200" height="200" align="center"></a>
                   <p><font size="1">Check out the other high-flying activities Rumble does by clicking on him!</font></p>
               </div>
               <div class="box">
                   <h3>Contact Information</h3>
-                  <p>Chesapeake Energy Arena:100 W. Reno Ave. Oklahoma City, OK 73102 |(405) 602-8500| Office Hours: Monday-Friday 8 a.m - 5 p.m</p>
-                  <a href="https://www.chesapeakearena.com/teams/detail/the-thunder"><img src="./arena.jpg" width="300" height="150" align="center"></a>
+                  <p class="dark">Chesapeake Energy Arena:100 W. Reno Ave. Oklahoma City, OK 73102 |(405) 602-8500| Office Hours: Monday-Friday 8 a.m - 5 p.m</p>
+                  <a href="https://www.chesapeakearena.com/teams/detail/the-thunder"><img src="./arena.jpg" title="Chesapeake Energy Arena" width="300" height="150" align="center"></a>
                   <p><font size="1">Want to buy tickets for upcoming Thunder home games? Click the arena to learn more!</font></p>
               </div>
           </div>
