--- a/projects.html
+++ b/projects.html
@@ -103,17 +103,26 @@
               </article>
               
               <aside id="sidebar">
+                <div class="dark">
                   <div class="box">
                       <h3>Repl.it Account Setup</h3>
-                      <a href="https://repl.it"><img src="./replitlogo.png" width="250" height="150" align="center"></a>
+                      <a href="https://repl.it"><img src="./replit2.png" title="Repl.it Account Setup" width="120" height="120" align="center"></a>
                       <p><font size="2">To create your own repl.it account, click on the image to begin!</font></p>
                   </div>
                   <div class="box">
                       <h3>Python Downloader</h3>
-                      <a href="https://www.python.org/downloads/"><img src="./python logo.jpg" width="250" height="150" align="center"></a>
-                      <p><font size="2">To download the Python application, click on the image to begin!</font></p>
+                      <a href="https://www.python.org/downloads/"><img src="./python_clear.png" title="Python Downloader" width="150" height="150" align="center"></a>
+                      <p><font size="2">To download the Python application, click on the logo to begin!</font></p>
                   </div>
-                </aside>
+                  <div class="box">
+                      <h3>Need a Break?</h3>
+                      <a href="https://www.youtube.com"><img src="./yt logo.png" title="YouTube" width="120" height="80" align="center"></a>
+                      <a href="https://www.google.com"><img src="./google.png" title="Google" width="80" height="80" align="center"></a>
+                      <a href="https://www.spotify.com"><img src="./spotify.png" title="Spotify Music" width="80" height="80" align="center"></a>
+                      <p><font size="2">Click the red play button to watch entertaining videos on Youtube, the 'G' to access anything on the worldwide web through Google, and the green barred logo to listen to your favorite tunes on Spotify!</font></p>
+                  </div>
+                </div>
+              </aside>
         </section>
         <footer>
           <p> Oklahoma City Thunder, Copyright &copy; 2017</p>
