--- a/services.html
+++ b/services.html
@@ -56,6 +56,10 @@
                         <h3>Communication Services/Career Options</h3>
                         <p>Looking to become a season ticket holder? Seeking some fun facts? Here's our gift to you: <a href="http://www.nba.com/thunder/renewalthundercares1718/">show me</a>!</p>
                         <p>Interested in employment opportunities? Follow <a href="http://www.nba.com/thunder/employment">this website</a> to check out any available positions open for hiring.</p>
+                        <a href="https://seatgeek.com/oklahoma-city-thunder-tickets"><img src="./seatgeek.png" title="SeatGeek + Thunder Tickets" width="200" height="150" align="center"></a>
+                        <a href="https://www.stubhub.com/oklahoma-city-thunder-tickets/performer/335486/"><img src="./stubhub.png" title="Stubhub + Thunder Tickets" width="200" height="150" align="center"></a></a>
+                        <a href="https://gametime.co/oklahoma-city-thunder-tickets/performers/nbaokc"><img src="./gametime2.png" title="GameTime + Thunder Home Tickets" width="250" height="200" align="center"></a>
+                        <p><font size="1">Check out any of these three ticket websites to find the best available price value for an upcoming Thunder game! (P.S. If you use SeatGeek, use the promo code HYPE2 to get $30 off of your first purchase!)</font></p>
                     </li>
                       
                   </ul>
@@ -81,9 +85,9 @@
                   </form>
                   </div>
                   <img src="./paulgeorge.jpg" width="300" height="200" align="center">
-                  <p>Paul George is seen here playing laser tag with stroke victims and their families in the first annual PG Christmas Celebration.</p>
+                  <p class="dark">Paul George is seen here playing laser tag with stroke victims and their families in the first annual PG Christmas Celebration.</p>
                   <img src=".//jeramigrant.jpg" width="300" height="200" align="center">
-                  <p>Jerami Grant helps students of Will Rogers Elementary choose a free book on the Thunder Book Bus, presented by American Fidelity.</p>
+                  <p class="dark">Jerami Grant helps students of Will Rogers Elementary choose a free book on the Thunder Book Bus, presented by American Fidelity.</p>
                 </aside>
         </section>
         <footer>
