--- a/about.html
+++ b/about.html
@@ -40,23 +40,31 @@
           <div class="container">
               <article id="main-col">
                   <h1 class="page-title">About Us</h1>
-                  <p>
-                    If you want to learn more about the Oklahoma City Thunder's standings, <a href="http://www.espn.com/nba/standings">ESPN</a> has the answers you need!<br />
-                    If you want to learn more about the Oklahoma City Thunder's schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
-                  </p>
+                      <ul id="services">
+                      <li>
+                          <p>If you want to learn more about the Oklahoma City Thunder's standings, <a href="http://www.espn.com/nba/standings">ESPN</a> has the answers you need!<br />
+                             If you want to learn more about the Oklahoma City Thunder's schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
+                          </p>
+                      </li>
+                      </ul>
                   <p class="dark">
                     Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
                   </p>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/MMRdvbUpp-U" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-                  <p>Check out this highlight video of the Thunder vs. Warriors game, where Russell Westbrook posted his seventh double-double of the season in Kevin Durant's return to OKC!</p>
+                  <p class="dark">Check out this highlight video of the Thunder vs. Warriors game, where Russell Westbrook posted his seventh double-double of the season in Kevin Durant's return to OKC!</p>
               </article>
               
               <aside id="sidebar">
-                  <div class="dark">
-                  <h3>Our History, Then and Now</h3>
-                  <p>Before the Oklahoma City Thunder era, there existed an NBA team centered in the great city of Seattle. This team was known as the Supersonics, founded in 1967 and part of the Pacific Northwest Divisions. Click on the images to learn more about the history of each team!</p>
-                  <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./logo2.png" width="90" height="90" align="center"></a>
-                  <a href="http://www.nba.com/thunder/"><img src="./logo.png" width="90" height="90" align="right"></a>
+                  <div class="container">
+                      <h1 class="page-title"></h1>
+                              <ul id="services">
+                              <li>
+                                <h3>Our History, Then and Now</h3>
+                                <p>Before the Oklahoma City Thunder era, there existed an NBA team centered in the great city of Seattle. This team was known as the Supersonics, founded in 1967 and part of the Pacific Northwest Divisions. Click on the images to learn more about the history of each team!</p>
+                                <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./logo2.png" title="Seattle Supersonics History/Stats" width="90" height="90" align="center"></a>
+                                <a href="http://www.nba.com/thunder/"><img src="./thunder2.png" title="OKC Thunder Main Website" width="90" height="90" align="right"></a>
+                              </li>
+                              </ul>
                   </div>
               </aside>
             </div>
