--- a/projects.html
+++ b/projects.html
@@ -43,17 +43,17 @@
                     <ul id="services">
                     <li>
                         <h3>Python Assignments</h3>
-                        <div class="button1" style="background-color:3465AA">
+                        <div class="button1" style="background-color:3465AA" title="Two Rail Cipher">
                     <a href="Usher_TwoRail.py" download="Usher_TwoRail.py">
                        <p class="button1">Two Rail Cipher</p> 
                     </a>
                         </div>
-                        <div class="button2" style="background-color:D2691E">
+                        <div class="button2" style="background-color:D2691E" title="Substitution Cipher">
                     <a href="Usher_Substitution.py" download="Usher_Substitution.py">
                         <p class="button2">Substitution Cipher</p>
                     </a>
                         </div>
-                        <div class="button3" style="background-color:7CB854">
+                        <div class="button3" style="background-color:7CB854" title="Series Notation">
                     <a href="Usher_Series Notation.py" download="Usher_Series Notation.py">
                         <p class="button3">Series Notation</p>
                     </a>
@@ -62,17 +62,17 @@
                     </li>
                     <li>
                         <h3>Turtle/Scratch Projects</h3>
-                        <div class="button4" style="background-color:0AA275">
+                        <div class="button4" style="background-color:0AA275" title="Turtle Assignment">
                     <a href="Usher_Turtle Project.py" download="Usher_Turtle Project.py">
                         <p class="button4">Turtle Assignment</p>
                     </a>
                         </div>
-                        <div class="button5" style="background-color:00A2FF">
+                        <div class="button5" style="background-color:00A2FF" title="Honeycomb Design">
                     <a href="funtime.py" download="funtime.py">
                         <p class="button5">Honeycomb Design</p>
                     </a>
                         </div>
-                        <div class="button9" style="background-color:FFA500">
+                        <div class="button9" style="background-color:FFA500" title="Scratch Game">
                     <a href="https://scratch.mit.edu/projects/172038135/">
                         <p class="button9">Scratch Game</p>
                     </a>
@@ -81,17 +81,17 @@
                     </li>
                     <li>
                         <h3>Miscellaneous</h3>
-                        <div class="button6" style="background-color:000000">
+                        <div class="button6" style="background-color:000000" title="Abstraction Assignment">
                     <a href="abstraction.py" download="abstraction.py">
                         <p class="button6">Abstraction Assignment</p>
                     </a>
                         </div>
-                        <div class="button7" style="background-color:4B0082">
+                        <div class="button7" style="background-color:4B0082" title="Loops Assignment">
                     <a href="Usher_Loops.py" download="Usher_Loops.py">
                         <p class="button7">Loops Assignment</p>
                     </a>
                         </div>
-                        <div class="button8" style="background-color:CD853F">
+                        <div class="button8" style="background-color:CD853F" title="Python Story">
                     <a href="https://repl.it/@CameronUsher/Python-Story">
                         <p class="button8">Python Story</p>
                     </a>
