--- a/services.html
+++ b/services.html
@@ -49,8 +49,8 @@
                     <li>
                         <h3>Around the Holidays</h3>
                         <p>During the course of the holiday season, the Oklahoma City Thunder organization participates in the annual "Thunder Blue Christmas", where the players help fulfill childrens' wishlists in supporting Target stores.</p>
-                        <img src="./russtarget.jpg" width="300" height="200" align="center">
-                        <p><font size="1">Russell Westbrook takes a young fan and her parents around the store to cross things off of her list.</font></p>
+                        <img src="./russtarget.jpg" title="Russell Westbrook takes a young fan around Target during Christmas time." width="300" height="200" align="center">
+                        <img src="./melo movies.jpg" title="Carmelo Anthony takes students to the movies to see 'Ferdinand'." width="300" height="200" align="right">
                     </li>
                     <li>
                         <h3>Communication Services/Career Options</h3>
