--- a/about.html
+++ b/about.html
@@ -51,9 +51,17 @@
                     Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
                   </p>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/MMRdvbUpp-U" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-                  <p class="dark">Check out this highlight video of the Thunder vs. Warriors game, where Russell Westbrook posted his seventh double-double of the season in Kevin Durant's return to OKC!</p>
+                  <div>
+                  <h1 class="page-title"></h1>
+                  <ul id="services">
+                  <li>  
+                      <p>
+                          Check out this highlight video of the Thunder vs. Warriors game, where Russell Westbrook posted his seventh double-double of the season in Kevin Durant's return to OKC!
+                      </p>
+                  </li>
+                  </ul>
+                  </div>
               </article>
-              
               <aside id="sidebar">
                   <div class="container">
                       <h1 class="page-title"></h1>
@@ -66,6 +74,13 @@
                               </li>
                               </ul>
                   </div>
+                  <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Aspotify%3Aplaylist%3A37i9dQZF1DX0XUsuxWHRQd" width="150" height="300" frameborder="0" allowtransparency="true">
+                  #document = $0
+                  </iframe>
+                  <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Aspotify%3Aplaylist%3A37i9dQZF1DWT6MhXz0jw61" width="150" height="300" align="right" frameborder="0" allowtransparency="true">
+                  #document = $0
+                  </iframe>
+                  <p class="dark">If you want to hear some of my favorite playlists, take a look at this sample collection of songs shown above!</p>
               </aside>
             </div>
         </section>
