--- a/about.html
+++ b/about.html
@@ -45,12 +45,14 @@
                           <p>If you want to learn more about the Oklahoma City Thunder's standings, <a href="http://www.espn.com/nba/standings">ESPN</a> has the answers you need!<br />
                              If you want to learn more about the Oklahoma City Thunder's schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
                           </p>
+                          <img src="./okc team.jpg" title="Andre Roberson, Paul George, Russell Westbrook, Billy Donovan, Carmelo Anthony, and Steven Adams pose for a photo during media day." width="320" height="200" align="center">
+                          <img src="./bench.jpg" title="Carmelo Anthony, Paul George, and Russell Westbrook share a laugh on the bench during their opening night win against the New York Knicks." width="320" height="200" align="right">
                       </li>
                       </ul>
                   <p class="dark">
                     Current Roster for the OKC Thunder: #13 Paul George | #7 Carmelo Anthony | #0 Russell Westbrook | #12 Steven Adams | #9 Jerami Grant | #15 Kyle Singler | #34 Josh Huestis | #8 Alex Abrines | #54 Patrick Patterson | #2 Raymond Felton | #21 Andre Roberson | #44 Dakari Johnson | #4 Nick Collison | #23 Terrence Ferguson | #35 PJ Dozier | #25 Daniel Hamilton
                   </p>
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MMRdvbUpp-U" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MMRdvbUpp-U" align="center" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                   <div>
                   <h1 class="page-title"></h1>
                   <ul id="services">
