--- a/services.html
+++ b/services.html
@@ -44,16 +44,18 @@
                     <li>
                         <h3>Thunder Cares&copy; Organization</h3>
                         <p>The Thunder Cares&copy; Organization works to create programs that make a positive impact on the greater Oklahoma City community. Their primary focus is on youth, with an emphasis on reading and literacy, health and fitness, and, of course, basketball.</p>
-                        <p>To see the Thunder Cares&copy; Organization in action, <a href="http://www.nba.com/thunder/community">click here</a>!</p>
+                        <img src="./rayray.jpg" title="Raymond Felton hosted matches from Big Brothers Big Sisters of Oklahoma to enjoy an evening of bowling, gifts and holiday games." width="320" height="200" align="center">
+                        <img src="./dakari.jpg" title="Dakari Johnson gives local fans some hot chocalate during a surprise visit at Devon Ice Rink." width="320" height="200" align="right">
+                        <p>To see the Thunder Cares&copy; Organization in action at other local events, <a href="http://www.nba.com/thunder/community">click here</a>!</p>
                     </li>
                     <li>
                         <h3>Around the Holidays</h3>
                         <p>During the course of the holiday season, the Oklahoma City Thunder organization participates in the annual "Thunder Blue Christmas", where the players help fulfill childrens' wishlists in supporting Target stores.</p>
                         <img src="./russtarget.jpg" title="Russell Westbrook takes a young fan around Target during Christmas time." width="300" height="200" align="center">
-                        <img src="./melo movies.jpg" title="Carmelo Anthony takes students to the movies to see 'Ferdinand'." width="300" height="200" align="right">
+                        <img src="./melo movies.jpg" title="Carmelo Anthony takes students to the movies to see an exclusive premier of 'Ferdinand'." width="300" height="200" align="right">
                     </li>
                     <li>
-                        <h3>Communication Services/Career Options</h3>
+                        <h3>Thunder Ticket Purchasing/Career Options</h3>
                         <p>Looking to become a season ticket holder? Seeking some fun facts? Here's our gift to you: <a href="http://www.nba.com/thunder/renewalthundercares1718/">show me</a>!</p>
                         <p>Interested in employment opportunities? Follow <a href="http://www.nba.com/thunder/employment">this website</a> to check out any available positions open for hiring.</p>
                         <a href="https://seatgeek.com/oklahoma-city-thunder-tickets"><img src="./seatgeek.png" title="SeatGeek + Thunder Tickets" width="200" height="150" align="center"></a>
@@ -84,10 +86,12 @@
                     <button class="button_1" type="submit"> Send your request here. We'll get back you soon!</button>
                   </form>
                   </div>
-                  <img src="./paulgeorge.jpg" width="300" height="200" align="center">
+                  <img src="./paulgeorge.jpg" title="Paul George plays laser tag with stroke victims during the PG Christmas Celebration." width="300" height="200" align="center">
                   <p class="dark">Paul George is seen here playing laser tag with stroke victims and their families in the first annual PG Christmas Celebration.</p>
-                  <img src=".//jeramigrant.jpg" width="300" height="200" align="center">
+                  <img src="./jeramigrant.jpg" title="Jerami Grant helps students pick out books for their reading logs while aboard the Thunder Book Bus." width="300" height="200" align="center">
                   <p class="dark">Jerami Grant helps students of Will Rogers Elementary choose a free book on the Thunder Book Bus, presented by American Fidelity.</p>
+                  <img src="./russell.jpg" title="Russell Westbrook and his Why Not? Foundation bring gifts and holiday cheer to homeless families through the sixth annual Why Not? Holiday Party at City Rescue Mission." width="300" height="200" align="center">
+                  <p class="dark">Through his Why Not? Foundation, the Oklahoma City Thunder point guard always makes sure to come to the aid of families around Thanksgiving and Christmas, when the strain of families can be at its peak.</p>
                 </aside>
         </section>
         <footer>
