--- a/about.html
+++ b/about.html
@@ -76,12 +76,15 @@
                               </li>
                               </ul>
                   </div>
+                  <div>
+                  <h1 class="page-title"></h1>
                   <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Aspotify%3Aplaylist%3A37i9dQZF1DX0XUsuxWHRQd" width="150" height="300" frameborder="0" allowtransparency="true">
                   #document = $0
                   </iframe>
                   <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Aspotify%3Aplaylist%3A37i9dQZF1DWT6MhXz0jw61" width="150" height="300" align="right" frameborder="0" allowtransparency="true">
                   #document = $0
                   </iframe>
+                  </div>
                   <p class="dark">If you want to hear some of my favorite playlists, take a look at this sample collection of songs shown above!</p>
               </aside>
             </div>
