--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Cameron Usher">
         <title>Oklahoma City Thunder | About Us</title>
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" type="image/x-icon" href="cutout.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="./img/cutout.png" />
     </head>
     <body>
       <header>
@@ -46,8 +46,8 @@
                           <p>If you want to learn more about the Oklahoma City Thunder's standings, <a href="http://www.espn.com/nba/standings">ESPN</a> has the answers you need!<br />
                              If you want to learn more about the Oklahoma City Thunder's schedule, check out <a href="http://www.nba.com/thunder/schedule">NBA.com</a> to see their past and future home and away contests!
                           </p>
-                          <img src="./okc team.jpg" title="Andre Roberson, Paul George, Russell Westbrook, Billy Donovan, Carmelo Anthony, and Steven Adams pose for a photo during media day." width="320" height="200" align="center">
-                          <img src="./bench.jpg" title="Carmelo Anthony, Paul George, and Russell Westbrook share a laugh on the bench during their opening night win against the New York Knicks." width="320" height="200" align="right">
+                          <img src="./img/okc team.jpg" title="Andre Roberson, Paul George, Russell Westbrook, Billy Donovan, Carmelo Anthony, and Steven Adams pose for a photo during media day." width="320" height="200" align="center">
+                          <img src="./img/bench.jpg" title="Carmelo Anthony, Paul George, and Russell Westbrook share a laugh on the bench during their opening night win against the New York Knicks." width="320" height="200" align="right">
                       </li>
                       </ul>
                   <p class="dark">
@@ -72,8 +72,8 @@
                               <li>
                                 <h3>Our History, Then and Now</h3>
                                 <p>Before the Oklahoma City Thunder era, there existed an NBA team centered in the great city of Seattle. This team was known as the Supersonics, founded in 1967 and part of the Pacific Northwest Divisions. Click on the images to learn more about the history of each team!</p>
-                                <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./logo2.png" title="Seattle Supersonics History/Stats" width="90" height="90" align="center"></a>
-                                <a href="http://www.nba.com/thunder/"><img src="./thunder2.png" title="OKC Thunder Main Website" width="90" height="90" align="right"></a>
+                                <a href="http://www.sportsecyclopedia.com/nba/seattle/sonics.html"><img src="./img/logo2.png" title="Seattle Supersonics History/Stats" width="90" height="90" align="center"></a>
+                                <a href="http://www.nba.com/thunder/"><img src="./img/thunder2.png" title="OKC Thunder Main Website" width="90" height="90" align="right"></a>
                               </li>
                               </ul>
                   </div>
