--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </head>
     <body>
         <div class="video-section">
-            <video id="video-elem" preload="auto" autoplay="true" loop="true">
+            <video id="video-elem" preload="auto" autoplay="true" loop="true" muted="muted">
                 <source src="okcvid.mp4" type="video/mp4">
                 video not supported
             </video>
