--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Cameron Usher">
         <title>Oklahoma City Thunder | Community Service Activities</title>
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" type="image/x-icon" href="cutout.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="./img/cutout.png" />
     </head>
     <body>
       <header>
