--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Cameron Usher">
         <title>Oklahoma City Thunder | Welcome</title>
         <link rel="stylesheet" href="./css/style.css" href="./img">
-        <link rel="shortcut icon" type="image/x-icon" href="cutout.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="./img/cutout.png" />
     </head>
     <body>
       <header>
