--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,20 @@
                         </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
+                    <li>
+                        <h3>PIL Projects Using Python</h3>
+                        <div class="button10" style="background-color: E9967A" title="Image Pixelation Project Code">
+                    <a href="modified.py" download="modified.py">
+                        <p class="button10">Image Pixelation Project Code</p>
+                    </a> 
+                        </div>
+                        <div class="button11" style="background-color: ADD8E6" title="Pixelated Image File">
+                    <a href="Figure_1.png" download="Figure_1.png">
+                        <p class="button11">Pixelated Image Files</p>
+                    </a>
+                        </div>
+                    <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
+                    </li>
                       
                   </ul>
               </article>
@@ -121,6 +135,10 @@
                       <a href="https://www.google.com"><img src="./img/google.png" title="Google" width="80" height="80" align="center"></a>
                       <a href="https://www.spotify.com"><img src="./img/spotify.png" title="Spotify Music" width="80" height="80" align="center"></a>
                       <p><font size="2">Click the red play button to watch entertaining videos on Youtube, the 'G' to access anything on the worldwide web through Google, and the green barred logo to listen to your favorite tunes on Spotify!</font></p>
+                  </div>
+                  <div class="box"> 
+                     <h3>Even Russell Westbrook admires this code! Well, sort of...</h3>
+                     <img src="./img/staring contest.png" title="Russell Westbrook has the last say in regards to Joel Embiid of the Philadelphia 76ers staring him down in the Thunder victory on Sunday night." width="300" height="200" align="center">
                   </div>
                 </div>
               </aside>
